MB-15990: KVShard::setLowPriorityVbSnapshotFlag not working as expected.

The flag is not set because on the compare_exchange if flag equals
!newvalue, then flag is set to original value, as opposed to the
newvalue.

Change-Id: I029a4d90d601ff53a41926e2806cf9440783ac5c
Reviewed-on: http://review.couchbase.org/54218
Tested-by: buildbot <build@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>
Reviewed-by: Chiyoung Seo <chiyoung@couchbase.com>